# prismo

./: 404.html  index.html  objects.inv  pyproject.toml
.github/workflows/: push.yaml
advanced/custom_hardware/: index.html
advanced/data_format/: index.html
advanced/magnify/: index.html
advanced/utils/: index.html
api/controller/: index.html
core/config_control/: index.html
core/experiment/: index.html
core/image_acq/: index.html
src/prismo/: __init__.py  control.py  fourblock.py  gui.py  protocols.py  run.py  session.py  utils.py  views.py  widgets.py
src/prismo/devices/: __init__.py  asi.py  bsi.py  demo.py  lumencor.py  manual.py  microfluidic.py  ports.py  protocols.py  sutter.py  ti.py  ti2.py  utils.py  zyla.py
src/prismo/devices/fluidic/: __init__.py  fluidic.py  packet.py
src/prismo/devices/thor/: thor.py
src/prismo/utils/: fourblock.py
tests/: test_control.py  test_run.py
